--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     color: #F9FAF8;
     justify-content: space-between;
     align-items: center;
+    margin: 0px;
 }
 
 ul {
@@ -66,7 +67,58 @@ margin-top: 60px;
 button {
     background-color: #3882F6;
     color: #E5E7EB;
-    height: 20px;
+    height: 25px;
     width: 80px;
     border-radius: 5px;
+}
+
+/* cuerpo del Landing page */
+
+.body {
+    display: flex;
+    flex-direction: column;
+    background: #F9FAF8;
+    padding-top: 60px;
+    padding-left: 100px;
+    padding-left: 130px;
+    padding-right: 130px;
+}
+ 
+.box-title {
+    display: flex;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    justify-content: center;
+    margin-top: 0px;
+}
+
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    
+}
+
+
+ 
+.card {
+
+    width: 180px;
+    height: 180px;
+    border-radius: 15px;
+    margin: 10px;
+    border-style: solid;
+    border: #3882F6;
+    border-width: 5px;
+}
+
+sub {
+    font-size: 16px;
+    font-family: Roboto, sans-serif;
+    justify-content: center;
+    margin-bottom: 100px;
 }
