--- a/style.css
+++ b/style.css
@@ -102,18 +102,16 @@ button {
     gap: 50px;
     
 }
-
-
  
 .card {
 
-    width: 180px;
-    height: 180px;
-    border-radius: 15px;
-    margin: 10px;
-    border-style: solid;
     border: #3882F6;
     border-width: 5px;
+    border-radius: 15px;
+    border-style: solid;
+    width: 180px;
+    height: 180px;
+    margin: 10px;
 }
 
 sub {
@@ -121,4 +119,17 @@ sub {
     font-family: Roboto, sans-serif;
     justify-content: center;
     margin-bottom: 100px;
+}
+
+/* Quote text */
+.quote {
+    display: flex;
+    background: #E5E7EB;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-family: ita;
 }
